--- a/Fennec/src/CMakeLists.txt
+++ b/Fennec/src/CMakeLists.txt
@@ -1,7 +1,8 @@
-add_library(Fennec Fennec.cpp)
-add_executable (demo main.cpp)
+add_compile_definitions(FENNEC_BUILD_LINK)
 
 include_directories(include)
+
+add_library(Fennec Application.cpp)
 
 find_package(glfw3 3.3 REQUIRED)
 target_link_libraries(Fennec glfw)
@@ -12,4 +13,3 @@ target_link_libraries(Fennec OpenGL::GL)
 find_package(GLEW REQUIRED)
 target_link_libraries(Fennec GLEW)
 
-target_link_libraries (demo Fennec)
