--- a/Fennec/tests/CMakeLists.txt
+++ b/Fennec/tests/CMakeLists.txt
@@ -1,3 +1,5 @@
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
+
 add_executable (test1 test1.cpp)
 
 include_directories(../src/include include)
